Implementação inicial da tela de produtos/estoque

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -321,3 +321,15 @@ h6 {
     @apply bg-background text-foreground;
   }
 }
+
+label {
+  user-select: none;
+}
+
+::placeholder {
+  user-select: none;
+}
+
+body {
+  user-select: none;
+}
